--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -59,6 +59,17 @@ a {
   box-shadow: none;
 }
 
+// Badge
+.badge-green, .label-green {
+  background-color: #488c6c !important;
+}
+
+.badge-orange, .label-orange {
+  background-color: #e9662c !important;
+}
+
+
+
 // Font awesome
 
 // Color
