--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -31,12 +31,21 @@
     width: 250px;
     float: left;
   }
-  #topbar #topbar-search input {
+  #topbar-search input {
     padding: 15px 30px !important;
     height: 100%;
     border: 0 !important;
     border-radius: 0;
     background: #3C3C3C;
+  }
+  #topbar-search i {
+    font-size: 20px;
+    margin: 0;
+    top: 17px;
+    right: 12px;
+    color: #ffffff;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
   }
   .navbar-top-links li {
     display: inline-block;
@@ -47,6 +56,13 @@
     color: #ffffff;
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
+  }
+  .navbar-top-links li > a span.badge {
+    position: absolute;
+    top: 5px;
+    right: 30px;
+    padding: 3px 6px;
+    color: #ffffff;
   }
   .navbar-top-links li.topbar-user a {
     padding: 12px 15px 11px;
@@ -367,12 +383,22 @@ span.block {
   min-height: 700px;
 }
 
+#sum_box .db {
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
 #sum_box .icon {
   color: #999999;
   font-size: 55px;
   margin-top: 7px;
   margin-bottom: 0px;
   float: right;
+}
+
+#sum_box .db:hover .icon {
+  opacity: 1;
+  color: #fff;
 }
 
 #sum_box h4 {
@@ -416,6 +442,14 @@ span.block {
 
 .progress .progress-bar.progress-bar-info {
   background-color: #5bc0de !important;
+}
+
+.progress .progress-bar.progress-bar-danger {
+    background-color: #d9534f !important;
+}
+
+.progress .progress-bar.progress-bar-warning {
+    background-color: #f0ad4e !important;
 }
 
 .portlet .portlet-body {
@@ -472,16 +506,3 @@ span.block {
 
 }
 
-li [class^="fa-"], li [class^="glyphicon-"], li [class^="icon-"], li [class*=" fa-"], li [class*=" glyphicon-"], li [class*=" icon-"] {
-    display: inline-block;
-    width: 1.25em;
-    text-align: center;
-}
-
-[class^="fa-"], [class^="glyphicon-"], [class^="icon-"], [class*=" fa-"], [class*=" glyphicon-"], [class*=" icon-"] {
-    display: inline-block;
-    margin-top: 1px;
-    font-size: 14px;
-    line-height: 14px;
-    -webkit-font-smoothing: antialiased;
-}
